# Simple-Rendering

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/ray_tracing_simple/: CMakeLists.txt  Main.cpp
demo/render_framework/: CMakeLists.txt  Main.cpp
demo/render_mipmap/: CMakeLists.txt  Main.cpp
demo/render_obj_loader/: CMakeLists.txt  Main.cpp
demo/render_shader/: CMakeLists.txt  Main.cpp
demo/render_simple/: CMakeLists.txt  Main.cpp  SimpleRenderer.cpp  SimpleRenderer.h
demo/render_texture/: CMakeLists.txt  Main.cpp
demo/render_transform/: CMakeLists.txt  Main.cpp  TransformRenderer.cpp  TransformRenderer.h
demo/render_uv_interpolation/: CMakeLists.txt  Main.cpp
demo/render_vshader/: Main.cpp
ray_tracing/: CMakeLists.txt  Data.cpp  Data.h  README.txt  RT.h  RT_assert.c  RT_assert.h  RT_create.c  RT_create.h  RT_linalg.c  RT_linalg.h  RT_main.c  RT_struct.h  Shading.cpp  Shading.h  Structure.cpp  Structure.h
render_simple/: CMakeLists.txt  SimpleRasterizer.cpp  SimpleRasterizer.h  SimpleRenderer.cpp  SimpleRenderer.h  SimpleShader.h  SimpleTriangle.cpp  SimpleTriangle.h  main.cpp
render_texture/: CMakeLists.txt  Main.cpp
render_transform/: Main.cpp  TransformRenderer.cpp  TransformRenderer.h
render_vshader/: CMakeLists.txt  Main.cpp
rendering/: CMakeLists.txt  Collider.h  Color.cpp  Color.h  Geometry.cpp  Rasterizer.h  Rendering.h  RenderingCore.h  Shading.h  TriangleMesh.h
rendering/core/: Camera.h  Collider.h  Color.cpp  Color.h  Controller.cpp  Controller.h  Event.cpp  Event.h  Factory.cpp  Factory.h  Geometry.cpp  Geometry.h  Primitive.h  Rasterizer.cpp  Rasterizer.h  Shader.h  Shading.h  Texture.h  TriangleMesh.cpp  TriangleMesh.h  VertexShader.h
rendering/framework/: FrameworkTemplate.md  GeneralPrimitive.cpp  GeneralPrimitive.h  GeneralShader.cpp  GeneralShader.h  README.md
rendering/primitive_impl/: DepthTriangle.cpp  DepthTriangle.h  MipmapTriangle.cpp  MipmapTriangle.h  NullPrimitive.h  SimpleTriangle.cpp  SimpleTriangle.h  TextureTriangle.cpp  TextureTriangle.h
rendering/rasterizer_impl/: SimpleRasterizer.cpp  SimpleRasterizer.h
rendering/shader_impl/: MeshDepthShader.cpp  MeshDepthShader.h  MeshShader.h  MipmapShader.cpp  MipmapShader.h  SimpleShader.h  SimpleTriShader.cpp  SimpleTriShader.h  SimpleTriVshader.cpp  SimpleTriVshader.h  TextureTriShader.cpp  TextureTriShader.h  TextureTriVshader.cpp  TextureTriVshader.h
rendering/texture_impl/: BilinearTexture.cpp  BilinearTexture.h  SimpleTexture.cpp  SimpleTexture.h
rendering/vshader_impl/: SimpleTriVshader.cpp  SimpleTriVshader.h  TextureTriVshader.cpp  TextureTriVshader.h
