include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/rendering)
include_directories(${OpenCV_INCLUDE_DIRS})
link_libraries(${OpenCV_LIBS})
add_subdirectory(render_simple)
add_subdirectory(render_transform)
add_subdirectory(render_shader)
add_subdirectory(render_texture)