include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${OpenCV_INCLUDE_DIRS})
link_libraries(${OpenCV_LIBS})
add_subdirectory(render_simple)
add_subdirectory(render_transform)
add_subdirectory(render_shader)
add_subdirectory(render_texture)
add_subdirectory(ray_tracing_simple)
add_subdirectory(render_uv_interpolation)
add_subdirectory(render_mipmap)
add_subdirectory(render_obj_loader)
add_subdirectory(render_framework)