include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${OpenCV_INCLUDE_DIRS})
link_libraries(${OpenCV_LIBS})
add_library(Rendering STATIC
        core/Color.cpp
        core/Geometry.cpp
        core/Rasterizer.cpp
        core/Event.cpp
        core/Controller.cpp
        core/Factory.cpp
        core/TriangleMesh.cpp
        primitive_impl/SimpleTriangle.cpp
        primitive_impl/TextureTriangle.cpp
        primitive_impl/MipmapTriangle.cpp
        primitive_impl/DepthTriangle.cpp
        rasterizer_impl/SimpleRasterizer.cpp
        shader_impl/SimpleTriShader.cpp
        shader_impl/TextureTriShader.cpp
        shader_impl/MipmapShader.cpp
        shader_impl/MeshShader.cpp
        shader_impl/MeshDepthShader.cpp
        texture_impl/SimpleTexture.cpp
        texture_impl/BilinearTexture.cpp)
